Tests/HyloTests/TestCases/TypeChecking/StoredPropertyDecl.hylo
//- typeCheck expecting: .failure

type A {

  let x0: Any

  var x1: Any

  let (a: y0, b: y1): { a: Any, b: Never }

  //! @+1 diagnostic incompatible labels: found '(a:c:)', expected '(a:b:)'
  let (a: z0, c: z1): { a: Any, b: Never } // error

}
